feat(soundscape): air absorption follows the listening height
Zone sounds now carry the height as air absorption and the player
low-passes each voice from 20 kHz down to 1.2 kHz, so zooming out
muffles the ground world while the height-provided altitude wind
stays next to the listener. Composition gains an air map (0 = next
to the listener) and AmbientVoice eases the cutoff and filters the
sample; weather sounds are not muffled.

This is the live version of the offline distance demos: the same
take covers near and far without extra files.